kuberenetes/node-port.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: system-test-app
  namespace: kube-system  # Explicitly tells K8s to drop this into kube-system
  labels: 
    app: system-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: system-test-app
  template:
    metadata:
      labels:
        app: system-test-app # Hubble uses this label to draw your visual bubble
    spec:
      containers:
      - name: web-container
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: system-test-service
  namespace: kube-system  # Must be in the exact same namespace as the Deployment
spec:
  type: NodePort
  selector:
    app: system-test-app  # Links the service to your deployment pods
  ports:
    - protocol: TCP
      port: 80         # Port inside the cluster network
      targetPort: 8080 # Port the container is listening on
      nodePort: 30005  # Explicitly sets an available port from the 30000-32767 range
