kuberenetes/path-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-api-app
  template:
    metadata:
      labels:
        app: my-api-app
    spec:
      containers:
      - name: api-container
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8089
---
apiVersion: v1
kind: Service
metadata:
  name: my-api-service
  namespace: default
spec:
  selector:
    app: my-api-app        # Targets the exact pod label above
  ports:
    - protocol: TCP
      port: 80             # The internal cluster port the Ingress looks for
      targetPort: 8089     # Forwards traffic to the app container port
