kuberenetes/stateless-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: stateless-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  selector:
    app: stateless-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateless-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stateless-web
  template:
    metadata:
      labels:
        app: stateless-web
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: shared-html
          mountPath: /usr/share/nginx/html
      volumes:
      - name: shared-html
        emptyDir: {} # A standard temporary shared directory for Deployments
